# color

./: .gitignore  .gitmodules  ReadMe.md  pyproject.toml
src/color/: __init__.py  clamp.py  hls.py  hsl.py  hsv.py  rgb.py  string.py  tint_shade.py
src/color/cie/: __init__.py  base.py  lab.py  luv.py  xyz.py
tests/: test_cielab.py  test_hsl.py  test_hsv.py  test_xy_chromaticity.py  test_xyz.py
